--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         use-quiet-mode: 'yes'
         use-verbose-mode: 'yes'
-        folder-path: 'website/'
+        folder-path: 'website/docs, website/blog, website/snippets'
         check-modified-files-only: 'yes'
         base-branch: 'current'
+        config-file: .github/workflows/markdown-links-config.json
