--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         use-quiet-mode: 'yes'
         use-verbose-mode: 'yes'
-        # check-modified-files-only: 'yes'
+        check-modified-files-only: 'yes'
         base-branch: 'current'
-        folder-path: 'website/'
-        config-file: .github/workflows/markdown-links-config.json
+        folder-path: 'website/docs/'
+        # config-file: .github/workflows/markdown-links-config.json
