--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -18,5 +18,5 @@ jobs:
         use-verbose-mode: 'yes'
         check-modified-files-only: 'yes'
         base-branch: 'current'
-        folder-path: 'website/docs/'
-        # config-file: .github/workflows/markdown-links-config.json
+        folder-path: 'website/'
+        config-file: .github/workflows/markdown-links-config.json
