--- a/.github/workflows/markdown-links-config.json
+++ b/.github/workflows/markdown-links-config.json
@@ -2,15 +2,15 @@
   "replacementPatterns": [
     {
       "pattern": "^/",
-      "replacement": "/website/docs/"
+      "replacement": "website/docs/"
     },
     {
       "pattern": "^/blog/",
-      "replacement": "/website/blog/"
+      "replacement": "website/blog/"
     },
     {
       "pattern": "^/snippets/",
-      "replacement": "/website/snippets/"
+      "replacement": "website/snippets/"
     }
   ]
 }
