--- a/.github/workflows/markdown-links-config.json
+++ b/.github/workflows/markdown-links-config.json
@@ -2,7 +2,7 @@
   "replacementPatterns": [
     {
       "pattern": "^/blog/",
-      "replacement": "/website/blog/"
+      "replacement": "{{BASEURL}}/website/blog/"
     }
   ]
 }
