--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,9 +1,10 @@
 name: Repo Sync
 
+# TODO: Trigger workflow manually from source private repo
 on:
   # schedule: 
   # - cron: "*/15 * * * *" # every 15 minutes. set to whatever interval you like
-  push
+  # push
 
 jobs:
   repo-sync:
