--- a/.github/workflows/content_governance.yml
+++ b/.github/workflows/content_governance.yml
@@ -10,3 +10,5 @@ jobs:
     - uses: actions/checkout@v3
     - uses: rojopolis/spellcheck-github-actions@v0
       name: Spellcheck
+      with:
+        config_path: website/.spellcheck.yml
