--- a/website/.spellcheck.yml
+++ b/website/.spellcheck.yml
@@ -2,6 +2,7 @@ matrix:
 - name: Markdown
   aspell:
     lang: en
+    ignore-case: true
   dictionary:
     wordlists:
     - website/.spellcheck-wordlist.txt
@@ -13,8 +14,10 @@ matrix:
   - pyspelling.filters.html:
       comments: false
       ignores:
+      - ':matches(code, pre)'
       - code
       - pre
+      - 'blockquote'
   sources:
   - '**/*.md'
   default_encoding: utf-8
