--- a/.github/workflows/content_governance.yml
+++ b/.github/workflows/content_governance.yml
@@ -10,3 +10,7 @@ jobs:
       - uses: errata-ai/vale-action@reviewdog
         with:
           files: website/
+          reporter: github-check
+          fail_on_error: true
+          level: warning
+          debug: true
