--- a/.vale.ini
+++ b/.vale.ini
@@ -1,8 +1,6 @@
 StylesPath = .github/styles
-MinAlertLevel = suggestion
-
-Packages = Microsoft
+MinAlertLevel = error
 
 [*.md]
-BasedOnStyles = Vale, Microsoft
+BasedOnStyles = Vale
 
