--- a/.vale.ini
+++ b/.vale.ini
@@ -1,6 +1,9 @@
 StylesPath = .github/styles
 MinAlertLevel = error
 
+Packages = Google, write-good
+
 [*.md]
-BasedOnStyles = Vale
+BasedOnStyles = Vale, Google, write-good
+
 
