--- a/.github/workflows/link_checker.yml
+++ b/.github/workflows/link_checker.yml
@@ -12,3 +12,4 @@ jobs:
         uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           use-verbose-mode: 'yes'
+          check-modified-files-only: 'yes'
