add folder path

--- a/.github/workflows/link_checker.yml
+++ b/.github/workflows/link_checker.yml
@@ -13,3 +13,5 @@ jobs:
         with:
           use-verbose-mode: 'yes'
           check-modified-files-only: 'yes'
+          base-branch: 'current'
+          folder-path: 'website/'
