--- a/.github/workflows/link_checker.yml
+++ b/.github/workflows/link_checker.yml
@@ -14,4 +14,4 @@ jobs:
           use-verbose-mode: 'yes'
           check-modified-files-only: 'yes'
           base-branch: 'current'
-          folder-path: 'website/'
+          folder-path: 'website/docs/'
