--- a/.github/workflows/link_checker_config.json
+++ b/.github/workflows/link_checker_config.json
@@ -3,6 +3,10 @@
     {
       "pattern": "^/",
       "replacement": "/github/workspace/website/docs/"
+    },
+    {
+      "pattern": "(?!\\.md)$",
+      "replacement": ".md"
     }
   ]
 }
