try with absolute path

--- a/.github/workflows/link_checker_config.json
+++ b/.github/workflows/link_checker_config.json
@@ -7,7 +7,7 @@
   "replacementPatterns": [
     {
       "pattern": "^/",
-      "replacement": "/github/workspace/website/docs/"
+      "replacement": "https://docs.getdbt.com/"
     },
     {
       "pattern": "(\\.md)?$",
