--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Link Checker
         uses: lycheeverse/lychee-action@master
         with:
-          args: --verbose
+          args: --verbose --no-progress './website/**/*.md'
       #- name: Run Link Checker
       #  uses: gaurav-nelson/github-action-markdown-link-check@v1
       #  with:
