--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -6,6 +6,14 @@
 no_progress = false
 
 ###
+### Cache
+###
+
+# Enable link caching. This can be helpful to avoid checking the same links on
+# multiple runs.
+cache = false
+
+###
 ### Requests
 ###
 
