--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -2,6 +2,10 @@
 ### Display
 ###
 
+# Verbose program output
+# Accepts log level: "error", "warn", "info", "debug", "trace"
+verbose = "debug"
+
 # Don't show interactive progress bar while checking links.
 no_progress = false
 
