--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -4,7 +4,7 @@
 
 # Verbose program output
 # Accepts log level: "error", "warn", "info", "debug", "trace"
-# verbose = "info"
+verbose = "info"
 
 # Don't show interactive progress bar while checking links.
 no_progress = false
