--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -7,7 +7,7 @@
 verbose = "info"
 
 # Don't show interactive progress bar while checking links.
-no_progress = false
+no_progress = true
 
 ###
 ### Cache
