--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -32,7 +32,10 @@ accept = [200, 429]
 ###
 
 # Exclude URLs from checking (supports regex)
-# exclude = ['file://*']
+exclude = [
+  'https://badge.fury.io',
+  'https://img.shields.io'
+]
 
 # Exclude all mail addresses from checking
 exclude_mail = true
